--- a/public/assets/SCSS/6-changingState/_changingState.scss
+++ b/public/assets/SCSS/6-changingState/_changingState.scss
@@ -6,6 +6,14 @@
   .viewWorkContainer {
     left: 25%;
     top: 60%;
+    a:before {
+      content: "";
+      left: 29%;
+    }
+    a:after {
+      content: "";
+      left: 29%;
+    }
   }
   .line {
     display: none;
@@ -28,8 +36,7 @@
   .projects {
     width: 80%;
     height: 80%;
-    padding-left: 0;
-    padding-top: 105px;
+    padding-left: 25px;
     z-index: 0;
     overflow-y: visible;
     img {
